2009-02-23	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Fixed several bugs from the tracker: #1559936, #1851478, #2121276, #2127362,
	  #2127508, #2122907, #2454975
	* Modified a few constants to be less dependant on the tile size being 8px.
	* Foes struck by magebane will seek a new weapon after being hit if they
	  lost their spells.
	* Prevent stats from being set outside the [0, 60] range by the cheat screen;
	  HPs are the sole exception, being settable in the [-50, 60] range.
	* Added FoV and SS to the list of games that do not change the screen size
	  when started from the commandline.
	* Applied part of patch #2348451, and a modified patch #2371363.
	* Eliminated more GCC 4.3.x compilation warnings.
	* Fixed goblin spawns in Fawn Tower. Contrary to popular opinion, it has
	  nothing at all to do with pikemen in the area or finishing off the goblins
	  in the area: monster eggs in SI simply do not seem to hatch in SI if the
	  egg's Z-coordinate differs by more than 4 units from the avatar's when the
	  egg is cached in. Also, extended jukebox egg behavior to other sound eggs.

2009-02-22	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* UCC: Added optional 'void' keyword to specify an usecode function without
	  returns (and warnings for missing that keyword). Improved handling of UCC
	  structs, and allowed them as function arguments and returns; fixed bug
	  with class member struct variables. Made #include directive include a file
	  only once, like PHP's #include_once.
	  Added 'nested' option to 'converse' blocks to force UCC to push/pop the
	  answers on start/end of the converse block; used as follows:
	  	converse : nested (options) { case-list }
	* Keyring: Added 'void' keyword to eliminate warnings.

2009-02-11	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* objs/contain.cc: Prevent avatar from being dragged into containers.
	* UCC: Function calls can now be class expressions too, and be used in the
	  right hand side of a class assignment.